--- a/proj1/project1/views/formpages/reset.ejs
+++ b/proj1/project1/views/formpages/reset.ejs
@@ -45,7 +45,7 @@
                                     <button type="submit" name="submit" value="Submit" class="cancelbtn">Submit</button>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="https://ofa.iiti.ac.in/facrec_che_2023_july_02/faculty/login"><button type="button" class="loginbtn pull-right">-->Login</button></a>
+                                    <a href="http://localhost:8000/login"><button type="button" class="loginbtn pull-right">-->Login</button></a>
                                 </div>
                             </div>
                         </form>
