--- a/proj1/project1/views/layout/every.ejs
+++ b/proj1/project1/views/layout/every.ejs
@@ -28,7 +28,7 @@
         }
 
         .container-fluid {
-            background-image: #605d60;
+            background-image: #4c494c;
             margin-top: 0px;
         }
 
@@ -57,8 +57,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10">
-                    <h3 style="color:#074ef5!important;">भारतीय प्रौद्योगिकी संस्थान पटना</h3>
-                    <h3 style="color: #1766e6!important;">Indian Institute of Technology Patna</h3>
+                    <h3 style="color:#3153a1!important;">भारतीय प्रौद्योगिकी संस्थान पटना</h3>
+                    <h3 style="color: #3153a1!important;">Indian Institute of Technology Patna</h3>
                 </div>
             </div>
         </div>
