--- a/proj1/project1/views/home/logged.ejs
+++ b/proj1/project1/views/home/logged.ejs
@@ -9,19 +9,19 @@
     display: block;
   }
   .container1 {
-    width: 94%;
+    width: 64%;
     border-radius: 15px;
     margin-top: 20px;
     padding: 24px;
     box-shadow: 0px 1px 30px 1px #284d7a;
-    background-color: #d985ea;
+    background-color: #f9f5f9fd;
     margin-inline: auto;
   }
   .login-form {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 1px 30px 1px #284d7a;
-    background-color: #F7FFFF;
+    background-color: #f5fafa;
   }
   .login-form h3 {
     text-align: center;
@@ -63,7 +63,7 @@
           <a href="http://localhost:8000/reset" >Reset Password</a>
         </form>
         <br />
-        <p style="text-align: center; color: rgb(0, 128, 128); font-size: 1.3em;"><strong>NOT REGISTERED? </strong><a href='http://localhost:8000/signup' class="btn-sm btn-primary">SIGN UP</a></p>
+        <p style="text-align: center; color: rgb(47, 52, 52); font-size: 1.3em;"><strong>NOT REGISTERED? </strong><a href='http://localhost:8000/signup' class="btn-sm btn-primary">SIGN UP</a></p>
       </div>
     </div>
   </div>
