--- a/proj1/project1/views/home/signup.ejs
+++ b/proj1/project1/views/home/signup.ejs
@@ -17,7 +17,7 @@
       font-weight: bold;
       font-family: "Sintony", sans-serif;
       text-align: center;
-      color: rgb(119, 155, 175);
+      color: rgb(14, 68, 98);
     }
     .iit-logo {
             max-width: 20vw; /* Adjust as needed */
@@ -57,7 +57,7 @@
         border-style: solid;
         border-radius: 10px;
         box-shadow: 0px 1px 30px 1px #284d7a;
-        background-color: #d985ea;
+        background-color: #eae4eb;
       "
     >
       <div class="col-md-6">
